fixing some alignment, smooth scroll, vertical divider in product

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,4 @@
 html {
-  scroll-padding-top: 8rem;
+  scroll-behavior: smooth;
+  scroll-padding-top: 7rem;
 }
